# opencv_image_transfer

./: .gitignore  CMakeLists.txt  README.md  build.sh  export.sh
config/: config.yml
example/: image_receiver_test.py  opencv_image_transfer_test.cpp
python_lib/: image_receiver_test.py  image_sender_test.py
python_lib/opencv_image_transfer/: ImgReceiver.py
src/: image_sender.cpp  image_sender.h
